# hmcmoments

./: .gitignore  LICENSE  MANIFEST.in  README.md  mypy.ini  pyproject.toml
src/hmcmoments/: __init__.py  __main__.py  format.py  generate.py  image.py  io.py  mcmc.py  models.py  settings.py
src/hmcmoments/stan_models/: double_gaussian.stan  double_gaussian_max.stan  single_gaussian.stan
